# MusicBoxChurn

./: .dockerignore  .gitignore  3_etl_down_sample_by_user.ipynb  4_feature_label_generation_with_spark.ipynb  5_train_model_sklearn.ipynb  6_recommendation_system.ipynb  CAPSTONE.md  CLAUDE.md  DATA.md  Dockerfile  Makefile  README.html  README.md  REPORT.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml
archive/: 1_download_data.ipynb  README.md
configs/: inference.yaml  train_lr.yaml  train_mlp.yaml  train_rf.yaml
configs/sweep/: train_gbm_nl15.yaml  train_gbm_nl31.yaml  train_gbm_nl63.yaml
extras/: README.md
extras/feast/: README.md  feature_definitions.py  feature_store.yaml
k8s/: batch-score-cronjob.yaml
scripts/: generate_report_figures.py
src/musicbox_churn/: config.py
src/musicbox_churn/data/: load_data.py  schema.py  splits.py
src/musicbox_churn/inference/: batch_score.py
src/musicbox_churn/models/: baselines.py  interface.py  tabular_mlp.py
src/musicbox_churn/monitoring/: drift_report.py  score_report.py
src/musicbox_churn/training/: calibration.py  evaluate.py  metrics.py  preprocessor.py  thresholding.py  train.py
src/musicbox_churn/utils/: seed.py
tests/: conftest.py  test_batch_score.py  test_calibration.py  test_data.py  test_metrics.py  test_monitoring.py  test_preprocessing.py  test_schema.py  test_splits.py  test_thresholding.py  test_training_smoke.py
