[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicbox_churn"
version = "0.1.0"
description = "Modernized churn-risk scoring pipeline for the Music Box dataset."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn==1.7.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "lightgbm>=4.3",
    "mlflow>=2.12",
    "torch>=2.2",
    "joblib>=1.3",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "archive",
    "mlruns",
    "output",
    "artifacts",
    "report",
    "Processed_data",
    "extras/feast",  # feast is an optional dep; lint would fail without it installed
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# UP017 (datetime.UTC) and UP042 (StrEnum) are 3.11+ idioms; project requires 3.11
# but local dev sometimes runs 3.10. Keep the older form for compatibility.
ignore = ["UP017", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
